feat: expose Chrome CPU flamechart traces
